# ub-g22-pss

./: .gitignore  .gitmodules  BGL.md  LICENSE  README.md  build.sh  output.txt  vcpkg.json
backgammon/: Backgammon.sln
mancala/: .gitignore  icon.svg.import  mancala.sln  project.godot
mancala/Assets/: mancala_background.jpg.import  mancala_board.png.import  mancala_button_neutral.png.import  mancala_button_pressed.png.import  mancala_cup_outline.png.import  mancala_green_button.png.import  mancala_pebble_1.png.import  mancala_pebble_2.png.import  mancala_pebble_3.png.import  mancala_pebble_4.png.import  mancala_pebble_5.png.import
mancala/Scenes/: Main.tscn
mancala/Scenes/Common/AIController/: AIController.cs  AIController.tscn  AIMinimaxSearchStrategy.cs  AIRandomSearchStrategy.cs  AISearchStrategy.cs
mancala/Scenes/Common/Background/: Background.tscn
mancala/Scenes/Common/Settings/: GameSettings.cs
mancala/Scenes/Common/StartButton/: StartButton.tscn
mancala/Scenes/Components/Background/: Background.tscn
mancala/Scenes/Components/Cup/: Cup.cs  Cup.tscn
mancala/Scenes/Components/GameBoard/: CupBoardCell.cs  GameBoard.tscn  GameBoardAction.cs  GameBoardCell.cs  GameBoardState.cs  MancalaBoardCell.cs
mancala/Scenes/Components/HUD/: HUD.cs  HUD.tscn
mancala/Scenes/Components/Mancala/: Mancala.cs  Mancala.tscn
mancala/Scenes/Components/PlayerSelect/: PlayerSelect.cs  PlayerSelect.tscn
mancala/Scenes/Screens/ChooseMenuScreen/: ChooseMenuScreen.cs  ChooseMenuScreen.tscn
mancala/Scenes/Screens/ChooseMenuScreen/Components/PlayerSelect/: PlayerSelect.cs  PlayerSelect.tscn
mancala/Scenes/Screens/PlayGroundScreen/: PlayGroundScreen.cs  PlayGroundScreen.tscn
mancala/Scenes/Screens/PlayGroundScreen/Components/GameBoard/: GameBoard.cs  GameBoard.tscn
mancala/Scenes/Screens/PlayGroundScreen/Components/GameBoard/Cup/: Cup.cs  Cup.tscn
mancala/Scenes/Screens/PlayGroundScreen/Components/GameHUD/: GameHUD.cs  GameHUD.tscn
mancala/Scenes/Screens/PlayerMenuScreen/: PlayerMenuScreen.cs  PlayerMenuScreen.tscn
mancala/Scenes/Screens/StartMenuScreen/: StartMenuScreen.cs  StartMenuScreen.tscn
mancala/Scripts/: GameManager.cs  GameState.cs  Player.cs  PlayerName.cs  SceneManager.cs
maze/: .gitignore  Maze.sln  SConstruct  project.godot
maze/resources/maze/: input_3.txt
maze/scenes/: main.tscn
maze/scripts/: run.sh
maze/src/components/: scene_object.h
maze/src/manager/: manager.h
maze/src/search/: visitor.h
res/: input.txt  input_0.txt  input_1.txt  input_2.txt
resources/maze/: input_0.txt  input_1.txt  input_3.txt
scripts/: build.sh  run.sh
src/: CMakeLists.txt  cell.cpp  cell.h  graph.h  graph_search.h  informed.cpp  main.cpp  maze.h  problem.h  search.h  uninformed.cpp  visitor.h  zone.cpp  zone.h
src/anim/: anim_explore.h
src/animations/: grid_animation.cpp  grid_animation.h
src/components/: component.h
src/manager/: event_manager.h  manager.cpp  render_manager.cpp  render_manager.h  resource_manager.h
src/maze/: cell.h  graph.h  maze.h
src/render/: event_manager.cpp  event_manager.h  manager.cpp  manager.h  render_manager.cpp  render_manager.h  resource_manager.cpp  resource_manager.h  scene_object.h
src/search/: problem.h  search.cpp  search.h
src/searching/: problem.h  search.cpp  search.h  visitor.h
sudoku/: output.txt  pyproject.toml
sudoku/resources/: big.txt  easy.txt  hard.txt  medium.txt
sudoku/sudoku/: __init__.py  __main__.py  problem.py  search.py  sudoku.py  visitor.py
vscode/: settings.json
(+7 files in other folders)
